fix: all window stretching

--- a/covid-dashboard/src/css/style.css
+++ b/covid-dashboard/src/css/style.css
@@ -103,7 +103,7 @@ h3{
   font-size: 40px;
   margin-top: 20px;
 }
-.main .left .cases-list{
+.cases-list{
   background-color: #232323;
   height: 70%;
   position: relative;
@@ -122,7 +122,6 @@ h3{
   overflow-x: hidden;
 }
 .main .left .cases-list .country-list-data .country-list-data-unit{
-
   font-size: 16px;
   line-height: 30px;
   border-bottom: solid 1px rgb(130, 126, 126);
@@ -346,7 +345,6 @@ h3{
     width: 100%;
     height: 500px;
   }
-
 }
 .close{
   color: #FFF;
@@ -366,9 +364,16 @@ h3{
   width: 100vw;
   height: 100vh;
   top: 0;
-  left: 0;
+  right: 0;
   z-index: 998;
 }
+
 .disabled{
   display: none;
+}
+.without-margin{
+  margin: 0;
+}
+.height100{
+  height: 100%;
 }
